--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -80,11 +80,13 @@
   <ItemGroup>
     <ClCompile Include="3Sum Closest.cpp" />
     <ClCompile Include="3Sum.cpp" />
+    <ClCompile Include="4Sum.cpp" />
     <ClCompile Include="Add and Search Word - Data structure design.cpp" />
     <ClCompile Include="Add Two Numbers.cpp" />
     <ClCompile Include="Basic Calculator II.cpp" />
     <ClCompile Include="Best Time to Buy and Sell Stock.cpp" />
     <ClCompile Include="Binary Search Tree Iterator.cpp" />
+    <ClCompile Include="Binary Tree Inorder Traversal.cpp" />
     <ClCompile Include="Binary Tree Right Side View.cpp" />
     <ClCompile Include="Binary Tree Zigzag Level Order Traversal.cpp" />
     <ClCompile Include="Bulls_and_Cows.cpp" />
@@ -97,8 +99,11 @@
     <ClCompile Include="Construct Binary Tree from Inorder and Postorder Traversal.cpp" />
     <ClCompile Include="Construct Binary Tree from Preorder and Inorder Traversal.cpp" />
     <ClCompile Include="Container with most water.cpp" />
+    <ClCompile Include="Contains Duplicate II.cpp" />
+    <ClCompile Include="Contains Duplicate.cpp" />
     <ClCompile Include="Convert Sorted Array to Binary Search Tree.cpp" />
     <ClCompile Include="Convert Sorted List to Binary Search Tree.cpp" />
+    <ClCompile Include="Count Primes.cpp" />
     <ClCompile Include="Counting Bits.cpp" />
     <ClCompile Include="Count_and_Say.cpp" />
     <ClCompile Include="Course Schedule II.cpp" />
@@ -115,7 +120,10 @@
     <ClCompile Include="Gas Station.cpp" />
     <ClCompile Include="Generate Parentheses.cpp" />
     <ClCompile Include="Gray Code.cpp" />
+    <ClCompile Include="Happy Number.cpp" />
     <ClCompile Include="Integer to Roman.cpp" />
+    <ClCompile Include="Intersection of Two Arrays II.cpp" />
+    <ClCompile Include="Intersection of Two Arrays.cpp" />
     <ClCompile Include="Jump Game.cpp" />
     <ClCompile Include="Group Anagrams.cpp" />
     <ClCompile Include="H-Index II.cpp" />
@@ -138,6 +146,7 @@
     <ClCompile Include="Remove Duplicates from Sorted List II.cpp" />
     <ClCompile Include="Reorder List.cpp" />
     <ClCompile Include="Reverse Linked List II.cpp" />
+    <ClCompile Include="Reverse String.cpp" />
     <ClCompile Include="Reverse Words in a String.cpp" />
     <ClCompile Include="Rotate Image.cpp" />
     <ClCompile Include="Rotate List.cpp" />
@@ -185,7 +194,9 @@
     <ClCompile Include="Sum Root to Leaf Numbers.cpp" />
     <ClCompile Include="Surrounded Regions.cpp" />
     <ClCompile Include="Swap_Nodes_in_Pairs.cpp" />
+    <ClCompile Include="temp.cpp" />
     <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="Two Sum.cpp" />
     <ClCompile Include="Two_Sum.cpp" />
     <ClCompile Include="Binary_Tree_Level_Order_Traversal.cpp" />
     <ClCompile Include="Maximum_Depth_of_Binary_Tree.cpp" />
@@ -220,6 +231,7 @@
     <ClCompile Include="Ugly Number II.cpp" />
     <ClCompile Include="Unique Binary Search Trees.cpp" />
     <ClCompile Include="Unique Paths II.cpp" />
+    <ClCompile Include="Valid Anagram.cpp" />
     <ClCompile Include="Validate Binary Search Treecpp.cpp" />
     <ClCompile Include="Valid_Parentheses.cpp" />
     <ClCompile Include="Valid_Sudoku.cpp" />
